# til-25-finals

./: .env.example  .gitignore  .gitmodules  README.md  docker-compose.yml  test.sh
finals/: Dockerfile  README.md
finals/src/: models_manager.py  participant_server.py
test_competition_server/: Dockerfile  pyproject.toml
test_competition_server/src/: constants.py  task_handler.py  test_competition_server.py
