[project]
name = "test-competition-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.12"
dependencies = [
    "fastapi>=0.115.12",
    "imageio[ffmpeg]>=2.37.0",
    "jiwer>=3.1.0",
    "pycocotools>=2.0.8",
    "requests>=2.32.3",
    "til-environment",
    "uvicorn[standard]>=0.34.2",
]

[tool.uv.sources]
til-environment = { path = "til-25-environment" }
